Fixed spacing on sign up and sign in page

--- a/app/assets/stylesheets/signin_and_signup.scss
+++ b/app/assets/stylesheets/signin_and_signup.scss
@@ -1,5 +1,5 @@
 .new_user {
-    padding: 5em 1em;
+    padding: 1em 50em 10em;
     margin: 0 auto;
 }
 
